fixed text spacing

--- a/src/components/Battle/Battle.css
+++ b/src/components/Battle/Battle.css
@@ -122,7 +122,7 @@ background: limegreen;
 
 .hp-text {
     position: absolute;
-    top: 5%;
+    top: -1.8%;
     width: 100%;
     /* color: white; */
     font-family: sans-serif;
@@ -135,7 +135,7 @@ background: limegreen;
 
 .stamina-text {
     position: absolute;
-    top: 15%;
+    top: 9.5%;
     width: 100%;
     /* color: white; */
     font-family: sans-serif;
